반정규화 정리

--- a/2025-12-06_정규화_반정규화.md
+++ b/2025-12-06_정규화_반정규화.md
@@ -43,7 +43,7 @@
 X, Y, Z가 릴레이션 R에 포함된 속성의 집합이라고 할 때, 함수 종속성에 관한 다음과 같은 규칙이 성립한다.
 - 부분집합 : if Y ⊆ X, then X -> Y
 - 증가 : if X -> Y, then XZ -> YZ
-- 이행 : if X -> Y and Y -> Z, X -> Z
+- 이행 : if X -> Y and Y -> Z, then X -> Z
 
 위 세 가지 규칙으로부터 다음의 규칙을 얻을 수 있다.
 - 결합 : if X -> Y and X -> Z, then X -> YZ
@@ -129,3 +129,27 @@ BCNF 정규형은 결정자이면서 후보키가 아닌 속성이 존재하면 
 
 
 > 정규화는 릴레이션의 분해를 통해 이루어지는데, 어떤 정규형 상태인 릴레이션 R1을 분해하여 만든 R2, R3 릴레이션은 R1 다음 정규형이 아닌 더 높은 정규형이 될 수 있다.
+
+
+### 반정규화
+
+정규화의 목표는
+- 중복 데이터 최소화
+- 삽입/수정/삭제 시 이상 현상 방지
+- 데이터 구조를 논리적으로 깨끗하게 유지
+
+
+반정규화는 정규화된 구조에 의도적으로 데이터 중복이나 종속을 다시 넣어서, 성능이나 사용 편의성을 얻는 설계 기법
+- 조인이 너무 많아서 쿼리가 느리고 복잡하다
+- 화면 하나 띄우는데 6~7개 테이블을 조인해야 한다
+
+반정규화의 목표로는 세 가지가 있다.
+- 성능 향상
+  - 조회 빈도가 높고 응답 속도가 중요한 쿼리가 조인/집계 시 느릴 때 사용
+  - 이때 중복을 허용하여 조인 횟수를 줄이거나 복잡한 집계를 미리 계산해 둬서, 조회 시 단순한 select로 끝내려고 하는 것이다.
+- 쿼리 단순화
+  - 반정규화로 `자주 쓰는 모양`의 테이블을 만들어 두면, SQL이 훨씬 단순해져 이에 대한 유지보수가 쉬워질 수 있다.
+- 비즈니스적 요구 (스냅샷/이력)
+  - 주문 당시의 상품명/가격, 회원 등급/혜택 등 `그 시점의 상태 그대로`를 항상 복원해야 하는 도메인에서는
+  - 마스터 테이블을 조인해서 현재값을 보는 게 아니라, 그때 값을 주문 테이블에 복사해두는 것이 더 맞는 경우가 많다고 한다.
+
